k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vardiya
  labels:
    name: vardiya
    environment: production
